app-test/app3_with_tls/app-hello-ssl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app3
  labels:
    name: app3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: app3
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: "gcr.io/google-samples/hello-app:2.0"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: app3
  labels:
    app: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-ingress-tls
  namespace: app3
  annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
   nginx.ingress.kubernetes.io/ssl-redirect: "true"
   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - app3.w0rm30.seg.br
    secretName: app3-secret
  rules:
  - host: app3.w0rm30.seg.br
    http:
      paths:
      - backend:
          service:
            name: hello-service
            port: 
              number: 80
        path: /
        pathType: Prefix
